k8s/backend-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spring-backend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: spring-backend
  template:
    metadata:
      labels:
        app: spring-backend
    spec:
      containers:
        - name: backend
          image: acraksprod123.azurecr.io/spring-backend:latest
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: spring-backend-svc
spec:
  type: ClusterIP
  selector:
    app: spring-backend
  ports:
    - port: 80
      targetPort: 8080
